--- a/efr.html
+++ b/efr.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <P>hello</P>
+    <P>в африке:</P>
+    <ul tupe="disk">
+        <li>реки вот такой ширины</li>
+        <li>горы вот такой ширины</li>
+        </ul>
+    
 </body>
 </html>
