--- a/Home/ДЗ1/Diary.html
+++ b/Home/ДЗ1/Diary.html
@@ -7,8 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>hello</h3>
-    <p>В Африке</p>
-    
+    <h1 align="centr">Дневник партизана</h1>
 </body>
 </html>
