--- a/Diary.html
+++ b/Diary.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 align="centr">Дневник партизана</h1>
+    <h1 align="center">Дневник партизана</h1>
+     
 </body>
 </html>
