--- a/Diary.html
+++ b/Diary.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1 align="center">Дневник партизана</h1>
-     
+     <ol>
+        <strong>Вторник.</strong>Выбили</ol>
 </body>
 </html>
