--- a/Diary.html
+++ b/Diary.html
@@ -9,6 +9,6 @@
 <body>
     <h1 align="center">Дневник партизана</h1>
      <ol>
-        <strong>Вторник.</strong>Выбили</ol>
+      <li><strong>Вторник.</strong> </li>Вторник. </strong>Выбили
 </body>
 </html>
