--- a/Diary.html
+++ b/Diary.html
@@ -9,6 +9,6 @@
 <body>
     <h1 align="center">Дневник партизана</h1>
      <ol>
-      <li><strong>Вторник.</strong> </li>Вторник. </strong>Выбили
+      <li><strong>Вторник.</strong> Выбили <a title="http://tupa-germania.ru> немцев</a>
 </body>
 </html>
