--- a/Diary.html
+++ b/Diary.html
@@ -9,6 +9,6 @@
 <body>
     <h1 align="center">Дневник партизана</h1>
      <ol>
-      <li><strong>Вторник.</strong> Выбили <a title="http://tupa-germania.ru> немцев</a>
+        <li><strong>Вторник.</strong> Выбили <a href="htpp://germania.one"> немцев</a> с опушки. Засели в доме лесника.</li>
 </body>
 </html>
