--- a/Diary.html
+++ b/Diary.html
@@ -11,8 +11,8 @@
      <ol>
         <li><strong>Вторник.</strong> Выбили <a href="htpp://germania.one"> немцев</a> с опушки. Засели в доме лесника.</li>
         <li><strong>Среда.</strong> Мощная контратака немцев вынудили нас оставить занятые ранее позиции.</li>
-        <li><strong>Четверг.</strong> Под покровом ночи смогли снова засесть в доме лесника. Курим "Беломор"</li>
+        <li><strong>Четверг.</strong> Под покровом ночи смогли снова засесть в доме лесника. Курим &#171;Беломор&#187.</li>
         <li><strong>Пятница.</strong> Вернулся лесник и всех выгнал.</li>
-        
+
 </body>
 </html>
