--- a/Diary.html
+++ b/Diary.html
@@ -13,7 +13,8 @@
         <li><strong>Среда.</strong> Мощная контратака немцев вынудили нас оставить занятые ранее позиции.</li>
         <li><strong>Четверг.</strong> Под покровом ночи смогли снова засесть в доме лесника. Курим &#171;Беломор&#187.</li>
         <li><strong>Пятница.</strong> Вернулся лесник и всех выгнал.</li>
-        &#169 бородатый <a href="http://litnet.com> анекдот</a>
+        &#169 бородатый <a href="http://litnet.com"> анекдот</a>
+        
 
 </body>
 </html>
