--- a/Diary.html
+++ b/Diary.html
@@ -9,7 +9,7 @@
 <body>
     <h1 align="center">Дневник партизана</h1>
      <ol>
-        <li><strong>Вторник.</strong> Выбили <a href="htpp://https://dw.com"> немцев</a> с опушки. Засели в доме лесника.</li>
+        <li><strong>Вторник.</strong> Выбили <a href="htpp://http://dw.com"> немцев</a> с опушки. Засели в доме лесника.</li>
         <li><strong>Среда.</strong> Мощная контратака немцев вынудили нас оставить занятые ранее позиции.</li>
         <li><strong>Четверг.</strong> Под покровом ночи смогли снова засесть в доме лесника. Курим &#171;Беломор&#187.</li>
         <li><strong>Пятница.</strong> Вернулся лесник и всех выгнал.</li>
