--- a/Home/ДЗ-1b/Vizbor/vizbor.html
+++ b/Home/ДЗ-1b/Vizbor/vizbor.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Юрий Визбор</h1>
-    <h3>Вечно студент<a href="file:///D:/IT%20%D0%BE%D0%B1%D1%83%D1%87%D0%B5%D0%BD%D0%B8%D0%B5/MinytkaViktor/Home/%D0%94%D0%97-1b/Vizbor/vechno_student.html"</a></h3>
+    <h3>Вечно студент</h3>
+
+    <a href=vechno_student.html>читать сначала</a> 
 </body>
 </html>
