--- a/Home/ДЗ-1b/Vizbor/vizbor.html
+++ b/Home/ДЗ-1b/Vizbor/vizbor.html
@@ -10,6 +10,8 @@
     <h1>Юрий Визбор</h1>
     <h3>Вечно студент</h3>
 
-    <a href=vechno_student.html>читать сначала</a> 
+    <a href="vechno_student.html">читать сначала</a> 
+    <a href="vechno_student.html"
+    <a href="../Vizbor/vechno_student.html">читать с последнего обзаца</a>
 </body>
 </html>
