--- a/Home/ДЗ-1b/Vizbor/vechno_student.html
+++ b/Home/ДЗ-1b/Vizbor/vechno_student.html
@@ -56,7 +56,7 @@
     разработал его в своей "Юмореске", а Э. Хумпердинк развернул  в
     целую оперу из жизни немецких студентов.</p>
     
-    <p1>"Гаудеамус"   был   очень   популярен   в   среде   русского
+    <p1> <a name="abc"></a>   был   очень   популярен   в   среде   русского
     студенчества.  Трудно,  пожалуй,  найти  старого  инженера  или
     врача, которые не  знали  бы  этого  гимна.  И  в  наши  дни  в
     Ленинграде и в Тарту, во многих институтах  зал  встает,  когда
