--- a/Home/ДЗ-1b/Vizbor/vizbor.html
+++ b/Home/ДЗ-1b/Vizbor/vizbor.html
@@ -11,7 +11,7 @@
     <h3>Вечно студент</h3>
 
     <a href="vechno_student.html">читать сначала</a> 
-    <a href=""
+    <a href="vechno_student.html#abc">читать с последнего абзаца</a>
     
     
 </body>
