--- a/Home/home 2/CHILDBOOK.html
+++ b/Home/home 2/CHILDBOOK.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=
-    , initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
+  <img src=""
+<p><em>За рулем сижу доволный&#8212<br>
+    Ездить просто и лекго!<br>
+    Только руль чуть&#8211чуть огромный<br>
+    И педали далеко.</p>
     
+
 </body>
 </html>
