--- a/Lessons/test.html
+++ b/Lessons/test.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-<img src="img" alt="">
-<li></li>
+
+    <img src="image.png" alt="машина">
+ 
 </body>
 </html>
