--- a/Home/home 2/CHILDBOOK.html
+++ b/Home/home 2/CHILDBOOK.html
@@ -7,12 +7,26 @@
     <title>Document</title>
 </head>
 <body>
-  <img src=""
-<p><em>За рулем сижу доволный&#8212<br>
-    Ездить просто и лекго!<br>
-    Только руль чуть&#8211чуть огромный<br>
-    И педали далеко.</p>
-    
 
+  <img src="http://fe.it-academy.by/Sites/0043248/car.png" alt="машина">
+  <p><em>За рулем сижу довольный&#8212<br>
+  Ездить просто и лекго&#161<br>
+  Только руль чуть&#8211чуть огромный<br>
+  И педали делеко</em>
+</p>
+<img src="http://fe.it-academy.by/Sites/0043248/elektri.jpeg" alt="электричка">
+<p><em>Мне купили <strong>паравозик</strong><br>
+Сразу два вагона возит.<br>
+Я включу его, и он<br>
+За собой везет вагон.<br>
+Вот бы мне в нем прокатиться,<br>
+Только жаль&#8212 не поместиться.</em></p>
+<img src="http://fe.it-academy.by/Sites/0043248/kraski.gif" alt="краски">
+<p>Нарисую я в альбоме<br>
+Голубое море<br>
+Белый парус над волною<br>
+Бьется на просторе</p>
+
+  
 </body>
 </html>
