--- a/Lessons/test2.html
+++ b/Lessons/test2.html
@@ -7,12 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    
+<img src="https://avatars.mds.yandex.net/i?id=78cdf7757ff7cd95185d1c0437f124747dcc9d22-6002742-images-thumbs&n=13" 
+alt="машина">
 
-    <img src="https://avatars.mds.yandex.net/i?id=78cdf7757ff7cd95185d1c0437f124747dcc9d22-6002742-images-thumbs&n=13"
-     alt="машина" 
-     height="500"
-     width="500" 
-     title="моя машина по оконьчании курса ит"
- 
 </body>
 </html>
