--- a/Home/home 2/CHILDBOOK.html
+++ b/Home/home 2/CHILDBOOK.html
@@ -22,10 +22,10 @@
 Вот бы мне в нем прокатиться,<br>
 Только жаль&#8212 не поместиться.</em></p>
 <img src="http://fe.it-academy.by/Sites/0043248/kraski.gif" alt="краски">
-<p>Нарисую я в альбоме<br>
+<p><em>Нарисую я в альбоме<br>
 Голубое море<br>
 Белый парус над волною<br>
-Бьется на просторе</p>
+Бьется на просторе</em></p>
 
   
 </body>
