--- a/Home/home 1a/Diary.html
+++ b/Home/home 1a/Diary.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500&family=Geologica:wght@300;500;700&family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet">
     
-    <title>Document</title>
+    <title>дневник партизана</title>
 </head>
 
 <body>
