--- a/Home/home 2/CHILDBOOK.html
+++ b/Home/home 2/CHILDBOOK.html
@@ -23,9 +23,9 @@
 Только жаль&#8212 не поместиться.</em></p>
 <img src="http://fe.it-academy.by/Sites/0043248/kraski.gif" alt="краски">
 <p><em>Нарисую я в альбоме<br>
-Голубое море<br>
+Голубое море,<br>
 Белый парус над волною<br>
-Бьется на просторе</em></p>
+Бьется на просторе.</em></p>
 
   
 </body>
