--- a/Lessons/test4.html
+++ b/Lessons/test4.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     
- <Div style="color: blue; width: 100 ;"> Загадки для детей - неотъемлемый элемент развития каждого крохи. Именно эти маленькие и
+ <Div  style="color: blue; width: top: 12; ; "> Загадки для детей - неотъемлемый элемент развития каждого крохи. Именно эти маленькие и
      весёлые стишки, которые требуют разгадки, помогают развивать логическое мышление и 
      внимательность у ребёнка. 
      Познавательные занятия всегда должны ненавязчиво включать в себя знакомство с загадками. 
@@ -20,7 +20,9 @@
       Все загадки, для удобства читателей, с ответами.
 </Div>
 
-
+<p> у носорога очень плохое зрение.</p>
+<!--вот тут надо сделать сочуствующее лицо-->
+<p>Но при его весе - это не проблема.</p>
 
 
 </body>
