--- a/Lessons/test.html
+++ b/Lessons/test.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
 
     <img src="https://avatars.mds.yandex.net/i?id=78cdf7757ff7cd95185d1c0437f124747dcc9d22-6002742-images-thumbs&n=13"
-     alt="машина" 
-     height="500"
-     width="500" 
-     title="моя машина по оконьчании курса ит"
- 
-</body>
+        alt="машина" height="500px" width="500px";>
+     </body>
+
 </html>
