--- a/Lessons/test2.html
+++ b/Lessons/test2.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>машина</title>
 </head>
 <body>
     
 <img src="https://avatars.mds.yandex.net/i?id=78cdf7757ff7cd95185d1c0437f124747dcc9d22-6002742-images-thumbs&n=13" 
-alt="машина">
+alt="машина" width="400">
+<p style="color: blue" >привет я <br>лошара</p>
 
 </body>
 </html>
