--- a/Home/home 1b/Vizbor/vizbor.html
+++ b/Home/home 1b/Vizbor/vizbor.html
@@ -10,7 +10,7 @@
     <h1>Юрий Визбор</h1>
     <h3>Вечно студент</h3>
 
-    <a href="vechno_student.html">читать сначала</a> <br>
+    <a href="vechno_student.html" target="_blank">читать сначала</a> <br>
     <a href="vechno_student.html#abc">читать с последнего абзаца</a>
     
     
