--- a/Home/home4/DIV_FRAME.html
+++ b/Home/home4/DIV_FRAME.html
@@ -13,9 +13,9 @@
 
 
     <div
-        style="background-image: url( http://fe.it-academy.by/Sites/0043292/1.gif ); background-repeat:repeat-y; background-position: left  ;">
+        style="background-image: url( http://fe.it-academy.by/Sites/0043292/1.gif ); background-repeat:repeat-y; background-position: left">
         <div
-            style="background-image:  url( http://fe.it-academy.by/Sites/0043292/2.gif );background-repeat:repeat-y; background-position: right  ;">
+            style="background-image:  url( http://fe.it-academy.by/Sites/0043292/2.gif );background-repeat:repeat-y; background-position: right">
             <div
                 style="background-image:  url( http://fe.it-academy.by/Sites/0043292/3.gif );background-repeat: repeat-x; background-position: center top; ">
                 <div
