--- a/Lessons/test.html
+++ b/Lessons/test.html
@@ -10,8 +10,20 @@
 
 <body>
 
-    <img src="https://avatars.mds.yandex.net/i?id=78cdf7757ff7cd95185d1c0437f124747dcc9d22-6002742-images-thumbs&n=13"
-        alt="машина" height="500px" width="500px";>
-     </body>
+    <div style="border: solid red 1px; text-align: justify">
+        <img src="/foto/kak-pravilo-gerberi-dolgo-raduyu.jpg " alt="flaw" style="float: left"> <br>
+        <img src="/foto/football-smol.jpeg"  alt="picture" style="float: right"> <br>
+      
+        Своё научное латинское название растение получило, возможно, из-за сходства нераспустившегося цветка с формой
+        головы и тела дельфина. По другой версии, имя растения происходит от названия греческого города Дельфы. Своё
+        научное латинское название растение получило, возможно, из-за сходства нераспустившегося цветка с формой головы
+        и тела дельфина.По другой версии, имя растения происходит от названия греческого города Дельфы. Своё научное
+        латинское название растение получило, возможно, из-за сходства нераспустившегося цветка с формой головы и тела
+        дельфина. По другой версии, имя растения происходит от названия греческого города Дельфы.
+
+
+    </div>
+
+</body>
 
 </html>
