--- a/Project/GTHREES.html
+++ b/Project/GTHREES.html
@@ -9,24 +9,39 @@
 </head>
 
 <body>
+    <div class="header">
+        <div class="container">
+            <div class="logo"> <img src="Logo.jpg" alt=" logo">
+                <div>
+                    <div class="menu">
+                        <ul>
+                            <li>Наши услуги</li>
+                            <li>Контакты</li>
+                            <li>+375(29)546-25-67</li>
+                            <li>RU</li>
+                        </ul>
+                        <button class="btn"> <a href="#">Получить расчёт <img src="Vector.jpg" alt=""> </a>
 
-   
-    <header>
-        <div  class="container">
-            <img src="Logo.jpg" alt="logo" style="float: left;">
-            <img src="Burger.png" alt="logo" style="float: right;">
-            <button> </button>
-            <ul>
-                <li>Наши услуги</li>
-                <li>Контакты</li>
-                <li>+375(29)546-25-67</li>
-                <li style="clear: both;"></li>
-                    
-            
-            </ul>
+                        </button>
+                        <div class="Burger"> <img src="Burger.png" alt="">
+                        </div>
+
+                    </div>
+
+
+                </div>
+
+
+            </div>
+
         </div>
 
-    </header>
+
+
+    </div>
+
+
+
 
 </body>
 
