--- a/index.html
+++ b/index.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    
-<div>
-    <a href="Home/home 1a/Diary.html">Diary </a>
-    <a href="Home/home 1b/Vizbor/vechno_student.html"> vechno_student</a>
-    <a href="Home/home 1b/Vizbor/vizbor.html"> vizbor</a>
-    <a href="Home/home 2/CHILDBOOK.html"> CHILDBOOK</a>
-    <a href="Home/home 3/FONT_GWF.html">FONT_GWF</a>
-    <a href="Home/home4/DIV_FRAME.html">DIV_FRAME</a>
 
-</div>
+<body>
+
+    <div style="border: 1px; background-color: aqua ;width: 200px; height: 150px;" >
+    <a href="Home/home 1a/Diary.html">Diary</a><br>
+
+        <a href="Home/home 1b/Vizbor/vechno_student.html"> vechno_student</a> <br>
+
+        <a href="Home/home 1b/Vizbor/vizbor.html"> vizbor</a> <br>
+
+        <a href="Home/home 2/CHILDBOOK.html"> CHILDBOOK</a> <br>
+
+        <a href="Home/home 3/FONT_GWF.html">FONT_GWF</a> <br>
+
+        <a href="Home/home4/DIV_FRAME.html">DIV_FRAME</a> <br>
+
+    </div>
 
 
 </body>
+
 </html>
