--- a/Lessons/block.html
+++ b/Lessons/block.html
@@ -20,9 +20,9 @@
 <body>
 
     <div style="text-align: center;font-size: 42px;background-color: yellow;padding: 20px;">Шапка</div>
-    <div>
-        <div style="float: left;width: 200px;background-color: blue;height: 349.6px; ">меню</div>
-        <div style="float: right;background-color: green;width: 200px; height: 349.6px; ">баннер</div>
+    <div style="background-color: darkgreen;" >
+        <div style="float: left;width: 200px;height: 349.6px;background-color: coral;  ">меню</div>
+        <div style="float: right;width: 200px; height: 349.6px; background-color: deeppink; ">баннер</div>
         <div style="margin-left: 220px;margin-right: 220px;">
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta cumque distinctio sapiente earum laborum
                 numquam doloremque soluta, quaerat libero eius, reprehenderit pariatur fuga maxime. Pariatur quae id
