--- a/index.html
+++ b/index.html
@@ -8,22 +8,23 @@
 </head>
 
 <body>
+    <div style="padding:auto;text-align: center;margin:top 5px;">
 
-    <div style="border: 1px; background-color: aqua ;width: 200px; height: 150px;" >
-    <a href="Home/home 1a/Diary.html">Diary</a><br>
+        <div style="border: 1px; background-color: aqua ;width: 200px; height: 150px;">
+            <a href="Home/home 1a/Diary.html">Diary</a><br>
 
-        <a href="Home/home 1b/Vizbor/vechno_student.html"> vechno_student</a> <br>
+            <a href="Home/home 1b/Vizbor/vechno_student.html"> vechno_student</a> <br>
 
-        <a href="Home/home 1b/Vizbor/vizbor.html"> vizbor</a> <br>
+            <a href="Home/home 1b/Vizbor/vizbor.html"> vizbor</a> <br>
 
-        <a href="Home/home 2/CHILDBOOK.html"> CHILDBOOK</a> <br>
+            <a href="Home/home 2/CHILDBOOK.html"> CHILDBOOK</a> <br>
 
-        <a href="Home/home 3/FONT_GWF.html">FONT_GWF</a> <br>
+            <a href="Home/home 3/FONT_GWF.html">FONT_GWF</a> <br>
 
-        <a href="Home/home4/DIV_FRAME.html">DIV_FRAME</a> <br>
+            <a href="Home/home4/DIV_FRAME.html">DIV_FRAME</a> <br>
 
+        </div>
     </div>
-
 
 </body>
 
