--- a/Lessons/tree.html
+++ b/Lessons/tree.html
@@ -11,7 +11,9 @@
 
 div ul li a { color: red;}
 div ul li span a { color: green;}
-
+div ul li em a { color: blue;}
+div p em a { color: yellow;}
+div span em a { color: black;}
 
 
 </style>
