--- a/Lessons/media1/block.html
+++ b/Lessons/media1/block.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
     <style>
         * {
             margin: 0;
@@ -14,13 +15,16 @@
         }
     </style>
 
+    <link rel="stylesheet" href="media.css">
+
+
 </head>
 
 
 <body>
 
-    <div style="text-align: center;font-size: 42px;background-color: yellow;padding: 20px;">Шапка</div>
-    <div style="background-color: darkgreen;" >
+    <div style="text-align: center;font-size: 42px;background-color: yellow;padding: 10px;">Шапка</div>
+    <div style="background-color: darkgreen;">
         <div style="float: left;width: 200px;height: 349.6px;background-color: coral;  ">меню</div>
         <div style="float: right;width: 200px; height: 349.6px; background-color: deeppink; ">баннер</div>
         <div style="margin-left: 220px;margin-right: 220px;">
@@ -42,10 +46,11 @@
                 sapiente earum laborum
                 numquam doloremque soluta, quaerat libero eius, reprehenderit pariatur fuga maxime. Pariatur quae id
                 minima non rerum! </p>
+            <div style="clear: both">
+            </div>
         </div>
+        <div style="text-align: center;font-size: 20px;background-color: rgb(236, 108, 11);padding: 20px;">подвал</div>
     </div>
-    <div style="text-align: center;font-size: 42px;background-color: rgb(236, 108, 11);padding: 20px;">подвал</div>
-
 </body>
 
 </html>
