--- a/primer/1.html
+++ b/primer/1.html
@@ -2,15 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
     <title>Document</title>
 </head>
 <body>
-    
- <div align="center" > <h1>hello</h1></div>
+    <div style="opacity: 0.4" >
+<img src="/foto/circle1.gif" alt="">
 
-
+</div>
 </body>
 </html>
