--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
             <a href="Home/home 3/FONT_GWF.html">FONT_GWF</a> <br>
 
-            <a href="Home/home4/DIV_FRAME.html">DIV_FRAME</a> <br>
-            
-            <a href="/Home/home 5/MAKET_TABLE.HTML"></a> <br>
+            <a href="/Home/home 4/DIV_FRAME.html">DIV_FRAME</a> <br>
+
+            <a href="/Home/home 5/MAKET_TABLE.HTML"> MAKET_TABLE</a> <br>
 
         </div>
     </div>
