--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 
 <body>
+<Div><H1 style="text-align:left; color: chartreuse;">ДОМАШКИ</H1>
+
     <div style="padding:auto;text-align: center;margin:top 5px;">
 
-        <div style="border: 1px; background-color: aqua ;width: 200px; height: 150px;">
+        <div style="border: 2px; background-color: aqua ;width: 200px; height: 150px; ">
             <a href="Home/home 1a/Diary.html">Diary</a><br>
 
             <a href="Home/home 1b/Vizbor/vechno_student.html"> vechno_student</a> <br>
@@ -27,7 +29,7 @@
 
         </div>
     </div>
-
+</Div>
 </body>
 
 </html>
