--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 
 <body>
-<Div><H1 style="text-align:left; color: chartreuse;">ДОМАШКИ</H1>
+<Div><H1 style="text-align:center; color: chartreuse;">ДОМАШКИ</H1>
 
     <div style="padding:auto;text-align: center;margin:top 5px;">
 
-        <div style="border: 2px; background-color: aqua ;width: 200px; height: 150px; ">
+        <div style="border: 2px; background-color: aqua ;width: 100%; height: 150px; ">
             <a href="Home/home 1a/Diary.html">Diary</a><br>
 
             <a href="Home/home 1b/Vizbor/vechno_student.html"> vechno_student</a> <br>
@@ -26,6 +26,7 @@
             <a href="/Home/home 4/DIV_FRAME.html">DIV_FRAME</a> <br>
 
             <a href="/Home/home 5/MAKET_TABLE.HTML"> MAKET_TABLE</a> <br>
+
 
         </div>
     </div>
