--- a/index.html
+++ b/index.html
@@ -7,30 +7,33 @@
     <title>Document</title>
 </head>
 
-<body>
-<Div><H1 style="text-align:center; color: chartreuse;">ДОМАШКИ</H1>
+<body style="background-color: darkseagreen;">
+    <Div>
+        <H1 style="text-align:center; color: chartreuse;">ДОМАШКИ</H1>
 
-    <div style="padding:auto;text-align: center;margin:top 5px;">
+        <div style="padding:auto;text-align: center;margin:top 5px;">
 
-        <div style="border: 2px; background-color: aqua ;width: 100%; height: 150px; ">
-            <a href="Home/home 1a/Diary.html">Diary</a><br>
+            <div style="border: 2px; background-color: aqua ;width: 100%; height: 150px; ">
+                <a href="Home/home 1a/Diary.html">Diary</a><br>
 
-            <a href="Home/home 1b/Vizbor/vechno_student.html"> vechno_student</a> <br>
+                <a href="Home/home 1b/Vizbor/vechno_student.html">
+                    vechno_student
+                </a> <br>
 
-            <a href="Home/home 1b/Vizbor/vizbor.html"> vizbor</a> <br>
+                <a href="Home/home 1b/Vizbor/vizbor.html"> vizbor</a> <br>
 
-            <a href="Home/home 2/CHILDBOOK.html"> CHILDBOOK</a> <br>
+                <a href="Home/home 2/CHILDBOOK.html"> CHILDBOOK</a> <br>
 
-            <a href="Home/home 3/FONT_GWF.html">FONT_GWF</a> <br>
+                <a href="Home/home 3/FONT_GWF.html">FONT_GWF</a> <br>
 
-            <a href="/Home/home 4/DIV_FRAME.html">DIV_FRAME</a> <br>
+                <a href="/Home/home 4/DIV_FRAME.html">DIV_FRAME</a> <br>
 
-            <a href="/Home/home 5/MAKET_TABLE.HTML"> MAKET_TABLE</a> <br>
+                <a href="/Home/home 5/MAKET_TABLE.HTML"> MAKET_TABLE</a> <br>
 
 
+            </div>
         </div>
-    </div>
-</Div>
+    </Div>
 </body>
 
 </html>
