--- a/index.html
+++ b/index.html
@@ -14,21 +14,22 @@
         <div style="padding:auto;text-align: center;margin:top 5px;">
 
             <div style="border: 2px; background-color: aqua ;width: 100%; height: 150px; ">
-                <a href="Home/home 1a/Diary.html">Diary</a><br>
+                <a href="Home/home 1a/Diary/index.html">Diary</a><br>
 
-                <a href="Home/home 1b/Vizbor/vechno_student.html">
+                <a href="Home/home 1b/Vizbor/index.html">
                     vechno_student
                 </a> <br>
 
-                <a href="Home/home 1b/Vizbor/vizbor.html"> vizbor</a> <br>
+                <a href="Home/home 1b/Vizbor/vechno_student/index.html"> vizbor</a> <br>
 
-                <a href="Home/home 2/CHILDBOOK.html"> CHILDBOOK</a> <br>
+                <a href="Home/home 2/childbook/index.html"> CHILDBOOK</a> <br>
 
-                <a href="Home/home 3/FONT_GWF.html">FONT_GWF</a> <br>
+                <a href="Home/home 3/FONT_GWF/index.html">FONT_GWF</a> <br>
 
-                <a href="/Home/home 4/DIV_FRAME.html">DIV_FRAME</a> <br>
+                <a href="Home/home 4/DIV_FRAME/index.html">DIV_FRAME</a> <br>
 
-                <a href="/Home/home 5/MAKET_TABLE.HTML"> MAKET_TABLE</a> <br>
+                <a href="Home/home 5/MAKET_DIV/index.HTML"> MAKET_DIV</a> <br>
+                <a href="Home/home 5/MAKET_TABLE/index.HTML">MAKET_TABLE</a> <br>
 
 
             </div>
