--- a/Home/home 6/Links/index.html
+++ b/Home/home 6/Links/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <!--использовал бордер-->
+    <!-- первый способ использовал бордер-->
 
     <div class="options1" >
         <a href="https://www.youtube.com/">первая ссылка</a>
