--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <div style="padding:auto;text-align: center;margin:top 5px;">
 
-            <div style="border: 2px; background-color: aqua ;width: 100%; height: 150px; ">
+            <div style="border: 2px; background-color: aqua ;width: 100%; height: 200px; ">
                 <a href="Home/home 1a/Diary/index.html">Diary</a><br>
 
                 <a href="Home/home 1b/Vizbor/index.html">
@@ -30,6 +30,7 @@
 
                 <a href="Home/home 5/MAKET_DIV/index.HTML"> MAKET_DIV</a> <br>
                 <a href="Home/home 5/MAKET_TABLE/index.HTML">MAKET_TABLE</a> <br>
+                <a href="Home/home 6/Links/index.html">Links</a>
 
 
             </div>
