--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
                 <a href="Home/home 5/MAKET_DIV/index.HTML"> MAKET_DIV</a> <br>
                 <a href="Home/home 5/MAKET_TABLE/index.HTML">MAKET_TABLE</a> <br>
-                <a href="Home/home 6/Links/index.html">Links</a>
+                <a href="Home/home 6/Links/index.html">Links</a><br>
 
 
             </div>
