--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a href="Home/home 5/MAKET_DIV/index.HTML"> MAKET_DIV</a> <br>
                 <a href="Home/home 5/MAKET_TABLE/index.HTML">MAKET_TABLE</a> <br>
                 <a href="Home/home 6/Links/index.html">Links</a><br>
-                <a href="Home/home 6/CSS_CHESS/index.html"></a> <br>
+                <a href="Home/home 6/CSS_CHESS/index.html">CSS_CHESS</a> <br>
 
 
             </div>
