--- a/index.html
+++ b/index.html
@@ -13,25 +13,27 @@
 
         <div style="padding:auto;text-align: center;margin:top 5px;">
 
-            <div style="border: 2px; background-color: aqua ;width: 100%; height: 200px; ">
-                <a href="Home/home 1a/Diary/index.html">Diary</a><br>
+            <div style="border: 2px; background-color: aqua ;width: 100%; height: 300px; ">
+                <a href="Home/home 1a/Diary/index.html">1a Diary</a><br>
 
                 <a href="Home/home 1b/Vizbor/index.html">
-                    vechno_student
+                    1b vechno_student
                 </a> <br>
 
-                <a href="Home/home 1b/Vizbor/vechno_student/index.html"> vizbor</a> <br>
+                <a href="Home/home 1b/Vizbor/vechno_student/index.html">1c vizbor</a> <br>
 
-                <a href="Home/home 2/childbook/index.html"> CHILDBOOK</a> <br>
+                <a href="Home/home 2/childbook/index.html">2 CHILDBOOK</a> <br>
 
-                <a href="Home/home 3/FONT_GWF/index.html">FONT_GWF</a> <br>
+                <a href="Home/home 3/FONT_GWF/index.html">3 FONT_GWF</a> <br>
 
-                <a href="Home/home 4/DIV_FRAME/index.html">DIV_FRAME</a> <br>
+                <a href="Home/home 4/DIV_FRAME/index.html">4 DIV_FRAME</a> <br>
 
-                <a href="Home/home 5/MAKET_DIV/index.HTML"> MAKET_DIV</a> <br>
-                <a href="Home/home 5/MAKET_TABLE/index.HTML">MAKET_TABLE</a> <br>
-                <a href="Home/home 6/Links/index.html">Links</a><br>
-                <a href="Home/home 6/CSS_CHESS/index.html">CSS_CHESS</a> <br>
+                <a href="Home/home 5/MAKET_DIV/index.HTML">5a MAKET_DIV</a> <br>
+                <a href="Home/home 5/MAKET_TABLE/index.HTML">5b MAKET_TABLE</a> <br>
+                <a href="Home/home 6/Links/index.html"> 6a Links</a><br>
+                <a href="Home/home 6/CSS_CHESS/index.html">6b CSS_CHESS</a> <br>
+                <a href="Home/home 6/CHEES/index.html">6c CHEES</a><br>
+                <a href="Home/home 6/6d/index.html">6d</a><br>
 
 
             </div>
