--- a/Home/home 5/MAKET_DIV/index.HTML
+++ b/Home/home 5/MAKET_DIV/index.HTML
@@ -4,24 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+
+
+    </style>
     <title>Document</title>
 </head>
 
 <body>
 
-    <div style=" text-align: center; 
-    background-color: #add8e6; 
-    color: #0a0dfe;">
+    <div style="text-align: center; 
+        background-color: #add8e6; 
+        color: #0a0dfe; height: 50px;padding:1px 0 12px 0;">
         <h2>ПРИВЕТ УЧАСТНИКАМ СОРЕВНОВАНИЙ!</h2>
-
     </div>
 
-
-    <div>
-        <div style="overflow: hidden;
+    <div style="clear: both;">
+        <div style="overflow: hidden; float: left;
     background-image: url(/foto/back_left.jpeg);
-    background-repeat: repeat-y">
-            <ul style="list-style-type: square; text-align: left; font-size: 15px;">
+    background-repeat: repeat-y; height: 400px;">
+            <ul style="list-style-type: square; text-align: left; font-size: 15px;padding: 30px;">
+                <h3>Виды спорта :</h3>
                 <a href="https://www.youtube.com/watch?v=i7R6_7e10QM">
                     <li>конькобежный спорт</li>
                 </a>
@@ -53,15 +56,126 @@
                     <li>шашки</li>
                 </a>
             </ul>
-       
-            <div style="text-align: center; overflow: hidden;background-image: url(/foto/bolls.gif);
-    background-repeat: repeat-y; background-position: right; width: float:               ;;">
-                <h2>Футбол</h2>
-                <img  src="/foto/football-smol.jpeg" alt="style float left">
+        </div>
 
-            </div>
+        <h1 style="text-align: center;">Футбол</h1>
+        <div style="float: left; width: 700px; height: 500px; padding: 50px ">Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Veritatis facere cumque omnis neque! Velit voluptatibus sunt illum molestias, delectus
+            atque natus ipsam temporibus quisquam sit, ullam odio nobis iste vel?
+
+
+            <img style="height: 200px; float: left;" src="/foto/football-smol.jpeg" alt="">
+        </div>
+
+
+        <div style="background-image: url(/foto/bolls.gif); float: right;
+        background-repeat: repeat-y; background-position: right top; width: 50px; height:;">
+
+        </div>
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
 
     </div>
+    <div style="text-align: center; clear: both;
+    background-color: #add8e6; 
+    color: #0a0dfe; height: 50px;padding:1px 0 12px 0;">
+        <h2>Главное не победа, а участие!</h2>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 
 </html>
