--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+
+    </style>
 </head>
 
 <body style="background-color: darkseagreen;">
@@ -16,7 +19,7 @@
             <div style="border: 2px; background-color: aqua ;width: 100%; height: 300px; ">
                 <a href="Home/home 1a/Diary/index.html">1a Diary</a><br>
 
-                <a href="Home/home 1b/Vizbor/index.html">
+                <a class="1" href="Home/home 1b/Vizbor/index.html">
                     1b vechno_student
                 </a> <br>
 
