--- a/Project/balkon/index.html
+++ b/Project/balkon/index.html
@@ -4,19 +4,255 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>balkon</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-    </style>
-
+    <link rel="stylesheet" href="/project/balkon/css/style css/style.css">
+    <title>balkon </title>
 </head>
 
 <body>
+
+    <header class="header">
+        <div class="wrapper">
+            <div class="header_wrapper">
+
+                <div class="header_logo">
+                    <a href="#!" class="header_logo-link">
+                        <img src="/project/balkon/img/logo.png" alt="Остекление балконов и лоджий под ключ">
+                    </a>
+                </div>
+
+                <nav class="header_nav">
+                    <ul class="header_list">
+                        <li class="header_item">
+                            <a href="#!" class="header_link">Балконы и лоджии</a>
+                        </li>
+                        <li class="header_item">
+                            <a href="#!" class="header_link">Окна</a>
+                        </li>
+                        <li class="header_item">
+                            <a href="#!" class="header_link">Двери</a>
+                        </li>
+                        <li class="header_item">
+                            <a href="#!" class="header_link">Дома и коттеджи</a>
+                        </li>
+                        <li class="header_item">
+                            <a href="#!" class="header_link">Калькулятор</a>
+                        </li>
+                        <li class="header_item">
+                            <a href="#!" class="header_link">Акции</a>
+                        </li>
+                        <li class="header_item">
+                            <a href="#!" class="header_link">Сотрудничество</a>
+                        </li>
+                        <li class="header_item">
+                            <a href="#!" class="header_link">О компании</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+
+            <main class="main">
+                <section class="intro">
+                    <h1 class="intro_title">
+                        Остекление балконов и лоджий под ключ
+                    </h1>
+                </section>
+            </main>
+
+            <main class="about">
+                <section class="frame">
+                    <span><img src="/project/balkon/img/Frame 97.png" alt="frame97"></span>
+                    <span><img src="/project/balkon/img/Frame 98.png" alt="frame98"></span>
+                </section>
+            </main>
+
+            <div>
+                <form class="search-form">
+
+                    <fieldset class="search">
+                        <p class="form_info">
+                            <button type="submit" class="search-form_submit"> рассчитать стоимость
+                            </button>
+                        </p>
+                    </fieldset>
+
+                </form>
+                <main class="circle">
+                    <section class="circle_blue">
+
+                        <img class="circle_blue_1" src="/project/balkon/img/Group 53.png" alt="circle_blue">
+                        <img class="price" src="/project/balkon/img/м².png" alt="price">
+
+                    </section>
+                </main>
+            </div>
+
+            <div class="options">
+                <h2 class="options_glazing">
+                    <img src="/project/balkon/img/Варианты остекления балконов с расчетом стоимости.png" alt="text">
+                </h2>
+            </div>
+
+            <div class="cards"> </div>
+
+
+
+            <div class="foto_balk">
+                <div class="one">
+                    <img src="/project/balkon/img/Теплое остекление балкона с отделкой пластиком.png" alt="cards">
+                    <img src="/project/balkon/img/Rectangle 10.png" alt="foto">
+                    <img src="/project/balkon/img/Frame 8.png" alt="cards">
+                    <img src="/project/balkon/img/Frame 9.png" alt="cards">
+                    <img src="/project/balkon/img/Frame 10.png" alt="cards">
+                    <img src="/project/balkon/img/Frame 11.png" alt="cards">
+                    <img src="/project/balkon/img/Frame 12.png" alt="cards">
+                    <img class="button_foto" src="/project/balkon/img/Frame 15.png" alt="cards">
+                </div>
+
+                <div class="two">
+                    <img src="/project/balkon/img/Теплое остекление балкона с отделкой пластиком.png" alt="cards">
+                    <img src="/project/balkon/img/Rectangle 10.png" alt="foto">
+                    <img src="/project/balkon/img/Frame 8.png" alt="cards">
+                    <img src="/project/balkon/img/Frame 9.png" alt="cards">
+                    <img src="/project/balkon/img/Frame 10.png" alt="cards">
+                    <img src="/project/balkon/img/Frame 11.png" alt="cards">
+                    <img src="/project/balkon/img/Frame 12.png" alt="cards">
+                    <img src="/project/balkon/img/Frame 15.png" alt="cards">
+                </div>
+
+                <div class="three">
+                    <img src="/project/balkon/img/Теплое остекление балкона с отделкой пластиком.png" alt="cards">
+                    <img src="/project/balkon/img/Rectangle 10.png" alt="foto">
+                    <img src="/project/balkon/img/Frame 8.png" alt="cards">
+                    <img src="/project/balkon/img/Frame 9.png" alt="cards">
+                    <img src="/project/balkon/img/Frame 10.png" alt="cards">
+                    <img src="/project/balkon/img/Frame 11.png" alt="cards">
+                    <img src="/project/balkon/img/Frame 12.png" alt="cards">
+                    <img src="/project/balkon/img/Frame 15.png" alt="cards">
+                </div>
+
+
+            </div>
+
+            <div class="foto_balk_two">
+                <div class="four">
+
+                    <img src="/project/balkon/img/Теплое остекление балкона с отделкой пластиком.png" alt="cards">
+                    <img src="/project/balkon/img/Rectangle 10.png" alt="foto">
+                    <img src="/project/balkon/img/Frame 8.png" alt="cards">
+                    <img src="/project/balkon/img/Frame 9.png" alt="cards">
+                    <img src="/project/balkon/img/Frame 10.png" alt="cards">
+                    <img src="/project/balkon/img/Frame 11.png" alt="cards">
+                    <img src="/project/balkon/img/Frame 12.png" alt="cards">
+                    <img class="button_foto" src="/project/balkon/img/Frame 15.png" alt="cards">
+                </div>
+
+                <div class="five">
+                    <img src="/project/balkon/img/Теплое остекление балкона с отделкой пластиком.png" alt="cards">
+                    <img src="/project/balkon/img/Rectangle 10.png" alt="foto">
+                    <img src="/project/balkon/img/Frame 8.png" alt="cards">
+                    <img src="/project/balkon/img/Frame 9.png" alt="cards">
+                    <img src="/project/balkon/img/Frame 10.png" alt="cards">
+                    <img src="/project/balkon/img/Frame 11.png" alt="cards">
+                    <img src="/project/balkon/img/Frame 12.png" alt="cards">
+                    <img src="/project/balkon/img/Frame 15.png" alt="cards">
+                </div>
+
+                <div class="six">
+                    <img src="/project/balkon/img/Теплое остекление балкона с отделкой пластиком.png" alt="cards">
+                    <img src="/project/balkon/img/Rectangle 10.png" alt="foto">
+                    <img src="/project/balkon/img/Frame 8.png" alt="cards">
+                    <img src="/project/balkon/img/Frame 9.png" alt="cards">
+                    <img src="/project/balkon/img/Frame 10.png" alt="cards">
+                    <img src="/project/balkon/img/Frame 11.png" alt="cards">
+                    <img src="/project/balkon/img/Frame 12.png" alt="cards">
+                    <img src="/project/balkon/img/Frame 15.png" alt="cards">
+                </div>
+            </div>
+
+
+            <H1>
+                <img src="/project/balkon/img/Наши услуги по остеклению.png" alt="glazing services">
+            </H1>
+
+            <div class="glazing_services">
+
+                <div class="home"><img src="/project/balkon/img/card.png" alt="домов"></div>
+                <div class="cottage"><img src="/project/balkon/img/card (1).png" alt="коттеджи"></div>
+                <div class="terraces"><img src="/project/balkon/img/card (2).png" alt="терас"></div>
+
+
+            </div>
+
+            <div class="form">
+                <div class="form_wrapper">
+                    <h1>Рассчитайте стоимость остекления балкона со скидкой 35% </h1>
+
+                    <form>
+                        <fieldset>
+                            <div><input class="pole_one" type="text"></div>
+                            <div><input class="pole_two" type="text"></div>
+                            <p class="form_info">
+                                <button type="submit" class="pole_trwee"> Заказать звонок
+                                </button>
+                            </p>
+
+                        </fieldset>
+                    </form>
+
+                   
+                </div>
+                <div class="vid" > <img class="shrink" src="/project/balkon/img/image 13.png" alt=""></div>
+
+
+
+            </div>
+
+            <div>
+                
+            </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        </div>
+
+    </header>
 
 </body>
 
