--- a/primer/index.html
+++ b/primer/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
-<script>
-
-    
-</script>
-
-
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea culpa sunt in deserunt amet tenetur modi, expedita
+        dolor minus. <em>Repudiandae quae debitis animi expedita</em> amet dolor beatae ipsam asperiores accusamus.</p>
 </body>
+
 </html>
